operator/pkg/gateway-api/testdata/gateway/httproute-backendtlspolicy-valid/output/backendtlspolicy-system-ca.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: system-ca
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: "backendtlspolicy-system-ca-test"
      sectionName: "btls"
  validation:
    wellKnownCACertificates: System
    
    hostname: "abc.example.com"
status:
  ancestors:
    - controllerName: io.cilium/gateway-controller
      ancestorRef:
        group: "gateway.networking.k8s.io"
        kind: "Gateway"
        namespace: gateway-conformance-infra
        name: same-namespace
      conditions:
        - lastTransitionTime: "2025-07-01T14:19:43Z"
          message: Accepted BackendTLSPolicy
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:19:43Z"
          message: All references are valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
