operator/pkg/gateway-api/testdata/gateway/httproute-backendtlspolicy-valid/output/cec-same-namespace.yaml
metadata:
  annotations:
    cec.cilium.io/use-original-source-address: "false"
  labels:
    gateway.networking.k8s.io/gateway-name: same-namespace
  name: cilium-gateway-same-namespace
  namespace: gateway-conformance-infra
  resourceVersion: 1
  ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1
      controller: true
      kind: Gateway
      name: same-namespace
spec:
  backendServices:
    - name: backendtlspolicy-cert-mismatch-test
      namespace: gateway-conformance-infra
      number:
        - "443"
    - name: backendtlspolicy-host-mismatch-test
      namespace: gateway-conformance-infra
      number:
        - "443"
    - name: backendtlspolicy-system-ca-test
      namespace: gateway-conformance-infra
      number:
        - "443"
    - name: backendtlspolicy-test
      namespace: gateway-conformance-infra
      number:
        - "443"
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      filterChains:
        - filterChainMatch:
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                commonHttpProtocolOptions:
                  maxStreamDuration: 0s
                httpFilters:
                  - name: envoy.filters.http.grpc_web
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.grpc_stats
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      emitFilterState: true
                      enableUpstreamStats: true
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                internalAddressConfig: {}
                rds:
                  routeConfigName: listener-insecure
                statPrefix: listener-insecure
                streamIdleTimeout: 300s
                upgradeConfigs:
                  - upgradeType: websocket
                useRemoteAddress: true
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      name: listener
      socketOptions:
        - description: Enable TCP keep-alive (default to enabled)
          intValue: "1"
          level: "1"
          name: "9"
        - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
          intValue: "10"
          level: "6"
          name: "4"
        - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
          intValue: "5"
          level: "6"
          name: "5"
        - description: TCP keep-alive probe max failures.
          intValue: "10"
          level: "6"
          name: "6"
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: listener-insecure
      virtualHosts:
        - domains:
            - "abc.example.com"
            - "abc.example.com:*"
          name: "abc.example.com"
          routes:
            - match:
                path: /backendtlspolicy-host-mismatch
              route:
                cluster: gateway-conformance-infra:backendtlspolicy-host-mismatch-test:443
                maxStreamDuration:
                  maxStreamDuration: 0s
            - match:
                path: /backendtlspolicy-cert-mismatch
              route:
                cluster: gateway-conformance-infra:backendtlspolicy-cert-mismatch-test:443
                maxStreamDuration:
                  maxStreamDuration: 0s
            - match:
                path: /backendtlspolicy-system-ca
              route:
                cluster: gateway-conformance-infra:backendtlspolicy-system-ca-test:443
                maxStreamDuration:
                  maxStreamDuration: 0s
            - match:
                path: /backendtlspolicy
              route:
                cluster: gateway-conformance-infra:backendtlspolicy-test:443
                maxStreamDuration:
                  maxStreamDuration: 0s

    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: gateway-conformance-infra/backendtlspolicy-cert-mismatch-test:443
      name: gateway-conformance-infra:backendtlspolicy-cert-mismatch-test:443
      outlierDetection:
        splitExternalLocalOriginErrors: true
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          commonTlsContext:
            tlsParams:
              tlsMaximumProtocolVersion: TLSv1_3
            combinedValidationContext:
              defaultValidationContext:
                match_typed_subject_alt_names:
                  - san_type: DNS
                    matcher:
                      exact: "abc.example.com"
              validationContextSdsSecretConfig:
                name: cilium-secrets/cilium-sync-cfgmap-b12423955ebfb5ff0e4c9b01e91a2f2325aba4de2924d35b2799aa2e51462c24
          sni: abc.example.com
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 60s
          useDownstreamProtocolConfig:
            http2ProtocolOptions: {}

    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: gateway-conformance-infra/backendtlspolicy-host-mismatch-test:443
      name: gateway-conformance-infra:backendtlspolicy-host-mismatch-test:443
      outlierDetection:
        splitExternalLocalOriginErrors: true
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          commonTlsContext:
            tlsParams:
              tlsMaximumProtocolVersion: TLSv1_3
            combinedValidationContext:
              defaultValidationContext:
                match_typed_subject_alt_names:
                  - san_type: DNS
                    matcher:
                      exact: "mismatch.example.com"
              validationContextSdsSecretConfig:
                name: cilium-secrets/cilium-sync-cfgmap-f3757660099595ce0587b4d45f08d43da98e3f80d7c9fa16d991dbd0946ee01b
          sni: mismatch.example.com
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 60s
          useDownstreamProtocolConfig:
            http2ProtocolOptions: {}

    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: gateway-conformance-infra/backendtlspolicy-system-ca-test:443
      name: gateway-conformance-infra:backendtlspolicy-system-ca-test:443
      outlierDetection:
        splitExternalLocalOriginErrors: true
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          commonTlsContext:
            tlsParams:
              tlsMaximumProtocolVersion: TLSv1_3
            validationContext:
              match_typed_subject_alt_names:
                - san_type: DNS
                  matcher:
                    exact: "abc.example.com"
              systemRootCerts: {}
          sni: abc.example.com
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 60s
          useDownstreamProtocolConfig:
            http2ProtocolOptions: {}

    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      edsClusterConfig:
        serviceName: gateway-conformance-infra/backendtlspolicy-test:443
      name: gateway-conformance-infra:backendtlspolicy-test:443
      outlierDetection:
        splitExternalLocalOriginErrors: true
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          commonTlsContext:
            tlsParams:
              tlsMaximumProtocolVersion: TLSv1_3
            combinedValidationContext:
              defaultValidationContext:
                match_typed_subject_alt_names:
                  - san_type: DNS
                    matcher:
                      exact: "abc.example.com"
              validationContextSdsSecretConfig:
                name: cilium-secrets/cilium-sync-cfgmap-f3757660099595ce0587b4d45f08d43da98e3f80d7c9fa16d991dbd0946ee01b
          sni: abc.example.com
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            idleTimeout: 60s
          useDownstreamProtocolConfig:
            http2ProtocolOptions: {}
  services:
    - listener: ""
      name: cilium-gateway-same-namespace
      namespace: gateway-conformance-infra
      ports:
        - 80
