operator/pkg/gateway-api/testdata/gateway/httproute-backendtlspolicy-valid/output/httproute-backendtlspolicy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendtlspolicy
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
      namespace: gateway-conformance-infra
  hostnames:
    - abc.example.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-system-ca-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy-system-ca
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-host-mismatch-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy-host-mismatch
    - backendRefs:
        - group: ""
          kind: Service
          name: backendtlspolicy-cert-mismatch-test
          port: 443
      matches:
        - path:
            type: Exact
            value: /backendtlspolicy-cert-mismatch
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-08-18T04:35:05Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-08-18T04:35:05Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: same-namespace
        namespace: gateway-conformance-infra
